Collapse tabs fixed

--- a/css/responsive.css
+++ b/css/responsive.css
@@ -66,14 +66,6 @@ label{
     
 }
 
-@media (max-width: 460px){
-.panel-heading{
-    height: 32px;
-}
-h4 a{
-    font-size: 12px;
-}
-}
 
 @media (max-width: 360px){
 .hover-bg .hover-text {
